{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 36,
  "lineage": "d2c1ac69-bcb3-d313-267c-50fa5b187faf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-007868005aea67c54",
            "arn": "arn:aws:ec2:us-east-1:552044133549:instance/i-022e9cb9bf3fdb76f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-022e9cb9bf3fdb76f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06fcb3869a4f28397",
            "private_dns": "ip-10-0-0-154.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.154",
            "public_dns": "ec2-52-90-247-106.compute-1.amazonaws.com",
            "public_ip": "52.90.247.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfab669c19d9f7aa",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090c1e962713cb882",
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a82cb9f4e668e2ba"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552044133549:internet-gateway/igw-0587d3d55460215d7",
            "id": "igw-0587d3d55460215d7",
            "owner_id": "552044133549",
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0cc4607c093f4b3a3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552044133549:route-table/rtb-0056af6acdc21ec08",
            "id": "rtb-0056af6acdc21ec08",
            "owner_id": "552044133549",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0587d3d55460215d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4607c093f4b3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9db9385d5ea53e4",
            "route_table_id": "rtb-0056af6acdc21ec08",
            "subnet_id": "subnet-090c1e962713cb882"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552044133549:security-group/sg-0a82cb9f4e668e2ba",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a82cb9f4e668e2ba",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "552044133549",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc4607c093f4b3a3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552044133549:subnet/subnet-090c1e962713cb882",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090c1e962713cb882",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552044133549",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "vpc_id": "vpc-0cc4607c093f4b3a3"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552044133549:vpc/vpc-0cc4607c093f4b3a3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dbb73eda3987760c",
            "default_route_table_id": "rtb-0f3fb9cd999a2625f",
            "default_security_group_id": "sg-057c4219b63ef32d6",
            "dhcp_options_id": "dopt-982844e2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc4607c093f4b3a3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f3fb9cd999a2625f",
            "owner_id": "552044133549",
            "tags": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            },
            "tags_all": {
              "billing_code": "ACCT9675309",
              "company": "Globomantics",
              "project": "Globomantics-web-app"
            }
          }
        }
      ]
    }
  ]
}